Rewrite of Pokemon class